crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_with_other_constraints@remove_foreign_key_with_other_constraints_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "posts_temp" ( "id" integer NOT NULL, "user_id" integer, PRIMARY KEY ("id") , CONSTRAINT "chk_user_id" CHECK (user_id > 0))
INSERT INTO "posts_temp" ("id", "user_id") SELECT "id", "user_id" FROM "posts"
DROP TABLE "posts"
ALTER TABLE "posts_temp" RENAME TO "posts"
CREATE UNIQUE INDEX "uq_user_id" ON "posts" ("user_id")
